# main.go
@@ -73,6 +73,7 @@ func main() {
 		v1.GET("/orders/:id", middleware.EnsureValidToken(cfg), controllers.GetOrder)
 		v1.PUT("/orders/:id/assign", middleware.EnsureValidToken(cfg), controllers.AssignOrder)
 		v1.PUT("/orders/:id/review", middleware.EnsureValidToken(cfg), controllers.ReviewOrder)
+		v1.PUT("/orders/:id/status", middleware.EnsureValidToken(cfg), controllers.UpdateOrderStatus)
 	}
 
 	// Start server
